--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -69,7 +69,7 @@
   width: 55.5px;
   height: 1%;
   border-bottom: 0.2rem solid;
-  border-color: #141d2f;
+  border-color: transparent;
   transition: border-color 125ms ease-in-out;
 }
 
