--- a/src/app/introduction/introduction.component.html
+++ b/src/app/introduction/introduction.component.html
@@ -1,11 +1,13 @@
 <div class="introduction">
-    <img class="shadow-background" src="assets/img/ShadowBackground.png">
-    <img class="profile-picture" src="assets/img/profile.png">
+    <div class="introduction-left">
+        <img class="shadow-background" src="assets/img/ShadowBackground.png">
+        <img class="profile-picture" src="assets/img/profile.png">
+    </div>
     <div class="introduction-right">
         <div class="vertical-line">I am</div>
         <div class="introduction-right-text">
-            <span>Leon Groschek</span>
-            <span>Frontend Developer</span>
+            <h1>Leon Groschek</h1>
+            <h2>Frontend Developer</h2>
         </div>
     </div>
 </div>
