--- a/src/app/introduction/introduction.component.scss
+++ b/src/app/introduction/introduction.component.scss
@@ -1,54 +1,58 @@
-.shadow-background {
+.introduction {
+  display: flex;
   position: absolute;
-  width: 690.7px;
-  height: 671.38px;
-  left: 12px;
-  top: 221.62px;
+  top: 109.3px;
 }
 
-.profile-picture {
-  position: absolute;
-  height: 705px;
-  left: 3.26%;
-  right: 51.88%;
-  top: 106px;
+.introduction-left {
+  position: relative;
+  display: flex;
 }
 
 .introduction-right {
   display: flex;
-  position: absolute;
-  top: 297px;
-  left: 630px;
+  align-items: center;
+  white-space: nowrap;
 }
 
-.vertical-line {
-  font-size: 64px;
-  font-weight: 400;
-  line-height: 77px;
-  letter-spacing: 0em;
-  text-align: left;
+.shadow-background {
+  width: 46vw;
+}
 
-  transform: rotate(270deg);
+.profile-picture {
+  position: absolute;
+  width: 42vw;
+}
+
+
+.vertical-line {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 4.8vw;
+  transform: rotate(180deg);
+  writing-mode: vertical-lr;
   color: white;
 }
 
 .introduction-right-text {
   color: white;
   display: flex;
+  justify-content: center;
   flex-direction: column;
   text-align: left;
   letter-spacing: 0em;
-
-  span:nth-of-type(1) {
-    font-size: 90px;
+  
+  h1 {
+    font-size: 5.8vw;
     font-weight: 700;
-    line-height: 108px;
+    margin: 0;
   }
-
-  span:nth-of-type(2) {
-    font-size: 58px;
-    font-weight: 400;
-    line-height: 70px;
+  
+  h2 {
+    font-size: 3.7vw;
     color: #FF4747;
+    text-transform: uppercase;
+    margin: 0;
   }
 }
