button almost finish

--- a/src/app/introduction/introduction.component.html
+++ b/src/app/introduction/introduction.component.html
@@ -1,13 +1,23 @@
 <div class="introduction">
     <div class="introduction-left">
-        <img class="shadow-background" src="assets/img/ShadowBackground.png">
+        <img class="shadow-background" src="assets/img/Shadow-background.png">
         <img class="profile-picture" src="assets/img/profile.png">
     </div>
     <div class="introduction-right">
-        <div class="vertical-line">I am</div>
-        <div class="introduction-right-text">
-            <h1>Leon Groschek</h1>
-            <h2>Frontend Developer</h2>
+        <div class="introduction-right-top">
+            <div class="vertical-line">I am</div>
+            <div class="introduction-right-text">
+                <h1>Leon Groschek</h1>
+                <h2>Frontend Developer</h2>
+            </div>
         </div>
+        <div>
+            <button>Let´s talk!</button>
+        </div>
+    </div>
+</div>
+<div class="introduction-vertical-vector">
+    <div>
+        <img class="introduction-vertical-vector-picture" src="assets/img/Vertical-vector.png">
     </div>
 </div>
