--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,9 +1,9 @@
 <div class="header">
     <div class="header-name">
-        <span>L</span>
-        <span>e</span>
-        <span>o</span>
-        <span>n</span>
+        <a href="#">L</a>
+        <a href="#">e</a>
+        <a href="#">o</a>
+        <a href="#">n</a>
     </div>
     <div class="header-group">
         <div>
