--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -12,8 +12,7 @@
   width: 100vw;
   max-width: 100%;
   height: 109.03px;
-
-  backdrop-filter: blur(32.5px);
+  background-color: #141D2F;
   color: #ffffff;
 }
 
@@ -27,12 +26,17 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  
+  a {
+    color: #ffffff;
+    text-decoration: none;
+  }
 
-  span:nth-of-type(1) {
+  a:nth-of-type(1) {
     color: #ff4747;
   }
 
-  span:nth-of-type(4) {
+  a:nth-of-type(4) {
     color: #fa7902;
   }
 }
