--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,3 +3,30 @@ body {
     background: #141D2F;
     font-family: 'Poppins', sans-serif;
 }
+
+html {
+	scroll-behavior: smooth;
+}
+
+::-webkit-scrollbar-track
+{
+	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+	border-radius: 10px;
+	background-color: #141D2F;
+}
+
+::-webkit-scrollbar
+{
+	width: 10px;
+	background-color: #141D2F;
+}
+
+::-webkit-scrollbar-thumb
+{
+	border-radius: 10px;
+	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
+	background-color: #FA7902;
+    background-image: -webkit-linear-gradient(top,
+											  #FF4747 0%,
+											  #FA7902 100%);
+}
