--- a/src/app/introduction/introduction.component.html
+++ b/src/app/introduction/introduction.component.html
@@ -1,7 +1,7 @@
 <div class="introduction">
     <div class="introduction-left">
         <img class="shadow-background" src="assets/img/Shadow-background.png">
-        <img class="profile-picture" src="assets/img/profile.png">
+        <img class="profile-picture" src="assets/img/Profile.png">
     </div>
     <div class="introduction-right">
         <div class="introduction-right-top">
@@ -17,7 +17,18 @@
     </div>
 </div>
 <div class="introduction-vertical-vector">
-    <div>
-        <img class="introduction-vertical-vector-picture" src="assets/img/Vertical-vector.png">
+    <img class="introduction-vertical-vector-picture" src="assets/img/Vertical-vector.png">
+    <div class="introduction-links-container">
+        <div class="introduction-links">
+            <div class="introduction-vertical-border"></div>
+            <img src="assets/img/Github-btn.png">
+            <img src="assets/img/Email-btn.png">
+            <img src="assets/img/Linkedin-btn.png">
+            <span>leon.groschek12@gmail.com</span>
+        </div>
+        <div class="introduction-scroll-down">
+            <p>Scroll Down</p>
+            <img src="assets/img/Scroll-down-arrow.png">
+        </div> 
     </div>
 </div>
