--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -5,11 +5,11 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 37px 100px;
-  z-index: 5;
+  border-bottom: 1px solid #141D2F;
+  z-index: 2;
 
-  box-sizing: border-box;
-  width: 100vw;
+  width: -webkit-fill-available;
+  padding: 0 100px;
   max-width: 100%;
   height: 109.03px;
   background-color: #141D2F;
@@ -79,5 +79,4 @@
 
 .border-red {
   border-color: #ff4747 !important;
-  z-index: 1;
 }
