--- a/src/app/introduction/introduction.component.scss
+++ b/src/app/introduction/introduction.component.scss
@@ -1,6 +1,7 @@
 .introduction {
   display: flex;
-  margin-top: 109.3px;
+  justify-content: center;
+  margin: 109.3px 100px 0 100px;
 }
 
 .introduction-left {
@@ -26,7 +27,6 @@
     padding: 15px 30px;
     box-shadow: 4px 4px 4px rgba(0, 0, 0, 0.25);
     transition: all 150ms ease-out;
-    z-index: 5;
 
     &:hover {
       cursor: pointer;
@@ -43,14 +43,12 @@
 }
 
 .shadow-background {
-  width: 46vw;
-  z-index: -3;
+  width: 42vw;
 }
 
 .profile-picture {
   position: absolute;
-  width: 42vw;
-  z-index: -2;
+  width: 38vw;
 }
 
 .vertical-line {
@@ -73,13 +71,13 @@
   gap: 0.6vw;
 
   h1 {
-    font-size: 5.8vw;
+    font-size: 4.9vw;
     font-weight: 700;
     margin: 0;
   }
 
   h2 {
-    font-size: 3.7vw;
+    font-size: 3vw;
     color: #ff4747;
     text-transform: uppercase;
     margin: 0;
@@ -89,10 +87,81 @@
 
 .introduction-vertical-vector {
   position: relative;
-  z-index: -1;
+  margin-top: -13.02vw;
 }
 
 .introduction-vertical-vector-picture {
   width: 100vw;
   max-width: 100%;
+  height: 29.3vw;
 }
+
+.introduction-vertical-border {
+  width: 6.5vw;
+  height: 0.26vw;
+  background-color: #ff4747;
+  border-top-right-radius: 4px;
+  border-bottom-right-radius: 4px;
+}
+
+.introduction-links-container {
+  position: absolute;
+  top: 10.5vw;
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-end;
+  width: 100vw;
+  max-width: 100%;
+  z-index: 1;
+}
+
+.introduction-links {
+  display: flex;
+  align-items: center;
+
+  img {
+    width: 30px;
+    height: 30px;
+    margin: 0 21px;
+
+    &:hover {
+      cursor: pointer;
+    }
+  }
+
+  span {
+    color: #ffffff;
+    font-size: 1.5vw;
+    margin: 0 21px;
+  }
+}
+
+.introduction-scroll-down {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  margin-right: 6.25vw;
+
+  p {
+    writing-mode: vertical-lr;
+    color: #ffffff;
+    font-size: 1.5vw;
+    margin: 0;
+  }
+
+  img {
+    margin-top: 7px;
+    margin-right: 3px;
+    width: 0.8vw;
+  }
+}
+
+// ====== MEDIA-QUERY ====== //
+
+// @media (max-width: 1250px) {
+
+//   .introduction-vertical-vector {
+//     margin-top: -175px;
+//   }
+// }
