--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -11,11 +11,11 @@
             <div class="header-underline" [class.border-red]="aboutMe"></div>
         </div>
         <div>
-            <a (click)="select('skills'); "  href="#">Skills</a>
+            <a (click)="select('skills'); "  href="#skills">Skills</a>
             <div class="header-underline" [class.border-red]="skills"></div>
         </div>
         <div>
-            <a (click)="select('portfolio'); "  href="#">Portfolio</a>
+            <a (click)="select('portfolio'); "  href="#portfolio">Portfolio</a>
             <div class="header-underline" [class.border-red]="portfolio"></div>
         </div>
     </div>
