--- a/src/app/introduction/introduction.component.html
+++ b/src/app/introduction/introduction.component.html
@@ -11,9 +11,7 @@
                 <h2>Frontend Developer</h2>
             </div>
         </div>
-        <div>
-            <button>Let´s talk!</button>
-        </div>
+        <button class="introduction-btn">Let´s talk!</button>
     </div>
 </div>
 <div class="introduction-vertical-vector">
