--- a/src/app/skills/skills.component.html
+++ b/src/app/skills/skills.component.html
@@ -1,1 +1,55 @@
-<p>skills works!</p>
+<div class="skills">
+    <div class="my-skills" id="skills">
+        <div class="skill-icons">
+            <img src="assets/img/Angular.png">
+            <span>Angular</span>
+        </div>
+        <div class="skill-icons">
+            <img src="assets/img/Typescript.png">
+            <span>Typescript</span>
+        </div>
+        <div class="skill-icons">
+            <img src="assets/img/Javascript.png">
+            <span>Javascript</span>
+        </div>
+        <div class="skill-icons">
+            <img src="assets/img/HTML.png">
+            <span>HTML</span>
+        </div>
+        <div class="skill-icons">
+            <img src="assets/img/Firebase.png">
+            <span>Firebase</span>
+        </div>
+        <div class="skill-icons">
+            <img src="assets/img/Git.png">
+            <span>GIT</span>
+        </div>
+        <div class="skill-icons">
+            <img src="assets/img/CSS.png">
+            <span>CSS</span>
+        </div>
+        <div class="skill-icons">
+            <img src="assets/img/Rest-api.png">
+            <span>Rest-Api</span>
+        </div>
+        <div class="skill-icons">
+            <img src="assets/img/Scrum.png">
+            <span>Scrum</span>
+        </div>
+        <div class="skill-icons">
+            <img src="assets/img/Material-design.png">
+            <span>Material<br>design</span>
+        </div>
+        <img class="skills-orange-shadow" src="assets/img/Orange-shadow.png">
+    </div>
+    <div class="skills-introduction">
+        <div>
+            <h1>My skills</h1>
+        </div>
+        <div>
+            <p class="skills-p">I have grown my frontend developments skills that have allowed<br>me to create different real projects.</p>
+        </div>
+        <button class="skills-btn">Get in touch</button>
+        <div class="skills-border"></div>
+    </div>
+</div>
