--- a/src/app/introduction/introduction.component.scss
+++ b/src/app/introduction/introduction.component.scss
@@ -16,24 +16,23 @@
   flex-direction: column;
   white-space: nowrap;
   gap: 2.9vw;
+}
 
-  button {
-    font-size: 1.5vw;
-    background-color: #fa7902;
-    color: #ffffff;
-    border: none;
-    border-radius: 10px;
-    align-self: center;
-    padding: 15px 30px;
-    box-shadow: 4px 4px 4px rgba(0, 0, 0, 0.25);
-    transition: all 150ms ease-out;
+.introduction-btn {
+  font-size: clamp(12px, 1.5vw, 1.5vw);
+  background-color: #fa7902;
+  color: #ffffff;
+  border: none;
+  border-radius: 10px;
+  align-self: center;
+  padding: 15px 30px;
+  box-shadow: 4px 4px 4px rgba(0, 0, 0, 0.25);
+  transition: all 150ms ease-out;
 
-    &:hover {
-      cursor: pointer;
-      background-color: #ff4747;
-      transform: scale(1.15);
-      transform-origin: left, right, bottom;
-    }
+  &:hover {
+    cursor: pointer;
+    background-color: #ff4747;
+    transform: scale(1.15);
   }
 }
 
@@ -131,7 +130,7 @@
 
   span {
     color: #ffffff;
-    font-size: 1.5vw;
+    font-size: clamp(13px, 1.5vw, 1.5vw);
     margin: 0 21px;
   }
 }
@@ -146,7 +145,7 @@
   p {
     writing-mode: vertical-lr;
     color: #ffffff;
-    font-size: 1.5vw;
+    font-size: clamp(13px, 1.5vw, 1.5vw);
     margin: 0;
   }
 
