--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
 <app-header></app-header>
 <app-introduction></app-introduction>
-<app-about-me id="about-me"></app-about-me>
+<app-about-me></app-about-me>
 <app-skills></app-skills>
+<app-portfolio></app-portfolio>
