check final version

--- a/src/app/about-me/about-me.component.html
+++ b/src/app/about-me/about-me.component.html
@@ -4,24 +4,24 @@
             <h1>About me</h1>
         </div>
         <div class="about-me-introduction">
-            <p>Hi, I am a Front-end deverloper based in München, Germany(....)Lorem ipsum dolor sit amet,
-                consectetur adipiscing elit. Ut auctor sem non tempus convallis. Integer et justo vitae urna
-                finibus eleifend sit amet porttitor sapien. Donec sollicitudin massa vel lorem vestibulum efficitur.
+            <p>Hi, I am a 24 years young Front-end developer based in Eigeltingen, Germany. I help you to solve problems with a cool
+               head. My experience I gained during the development of web apps with JavaScript, TypeScript and the
+               Angular Framework.
             </p>
         </div>
         <div>
             <div class="about-me-personal">
                 <img src="assets/img/Bulb-desktop.png">
                 <p>
-                    Some personal thing to share(...) Donec ut imperdiet diam, et convallis neque. Class aptent taciti
-                    sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. 
+                    I like to make the web a better place. So I work day-by-day hours to be a better developer. You´re welcome
+                    to visit my public portfolio.
                 </p>
             </div>
             <div class="about-me-personal">
                 <img src="assets/img/Puzzle-desktop.png">
                 <p>
-                    Some personal thing to share(...) Donec ut imperdiet diam, et convallis neque. Class aptent taciti
-                    sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. 
+                    During my free time, I play in a soccer club, or basketball or do some home workouts. In addition to it,
+                    I love to travel and build my Mind. Finally, I´m hungry for Knowledge.
                 </p>
             </div>
 
