--- a/src/app/introduction/introduction.component.html
+++ b/src/app/introduction/introduction.component.html
@@ -11,7 +11,7 @@
                 <h2>Frontend Developer</h2>
             </div>
         </div>
-        <button class="introduction-btn">Let´s talk!</button>
+        <a href="#contact" class="introduction-btn">Let´s talk!</a>
     </div>
 </div>
 <div class="introduction-vertical-vector">
@@ -22,7 +22,7 @@
             <img src="assets/img/Github-btn.png">
             <img src="assets/img/Email-btn.png">
             <img src="assets/img/Linkedin-btn.png">
-            <span>leon.groschek12@gmail.com</span>
+            <a href="#contact">leon.groschek12@gmail.com</a>
         </div>
         <div class="introduction-scroll-down">
             <p>Scroll Down</p>
