--- a/src/app/portfolio/portfolio.component.html
+++ b/src/app/portfolio/portfolio.component.html
@@ -23,7 +23,9 @@
                 <a target="_blank" href="{{item.livetest}}">Live Test</a>
                 <a target="_blank" href="{{item.github}}">Github</a>
             </div>
+          </div>
         </div>
-    </div>
-  </div>
+      </div>
+      <img class="portfolio-shadow-red" src="assets/img/Portfolio-shadow-red.png">
+      <img class="portfolio-shadow-orange" src="assets/img/Portfolio-shadow-orange.png">
 </div>
