--- a/src/app/about-me/about-me.component.scss
+++ b/src/app/about-me/about-me.component.scss
@@ -6,7 +6,7 @@
     padding-left: 102px;
 
     h1 {
-        font-size: 5.85vw;
+        font-size: clamp(45px, 5.85vw, 5.85vw);
         font-weight: 700;
         margin-top: 0;
     }
@@ -20,6 +20,11 @@
     
     img {
         margin: 0 20px;
+        transition: transform 125ms ease-in-out;
+
+        &:hover {
+            transform: scale(1.2);
+        }
     }
 }
 
@@ -57,5 +62,28 @@
     top: -19.53vw;
     right: 0;
     width: 20.45vw;
-    height: 48vw;
+    height: auto;
+}
+
+@media(max-width: 900px) {
+
+    .about-me-right-container {
+        display: none;
+    }
+
+    .about-me-right {
+        position: unset;
+    }
+
+    .about-me {
+        position: relative;
+        justify-content: center;
+        display: block;
+        padding: 0 50px;
+    }
+
+    .about-me-introduction {
+        max-width: none;
+    }
+
 }
