--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -1,4 +1,4 @@
-<div class="contact-container">
+<div class="contact-container" id="contact">
     <div class="contact-left">
         <h1>Contact</h1>
         <div class="contact-border"></div>
@@ -10,11 +10,19 @@
         <p>
             Need a Frontend developer? <b>Contact me!</b>
         </p>
+        <img class="contact-shadow" src="assets/img/Contact-shadow-red.png">
     </div>
-    <form (submit)="sendMail()" ngNativeValidate class="contact-right" #myForm>
-        <input required type="text" placeholder="Your name" name="name" #nameField>
-        <input required type="text" placeholder="Your email" name="email" #emailField>
-        <textarea required name="message" id="" cols="30" rows="10" placeholder="Your message" #messageField></textarea>
-        <button #sendButton>Send message :)</button>
+    <form autocomplete="off" (submit)="sendMail()" ngNativeValidate class="contact-right" #myForm>
+        <input id="name" required type="text" onfocus="this.placeholder=''" placeholder="Your name" name="name" #nameField>
+        <span class="invalid-name">Your name is requiered</span>
+        <input id="email" required type="email" onfocus="this.placeholder=''" placeholder="Your email" name="email" #emailField>
+        <span class="invalid-email">Your email is requiered</span>
+        <textarea id="message" required type="text" name="message" cols="30" rows="10" onfocus="this.placeholder=''" placeholder="Your message" #messageField></textarea>
+        <span class="invalid-message">Your message is empty</span>
+        <button class="contact-right-btn" #sendButton>Send message :)</button>
+        <a class="go-up" href="#">
+            <img src="assets/img/Go-up-white.png">
+            <img src="assets/img/Go-up-orange.png">
+        </a>
     </form>
 </div>
