--- a/src/app/contact/contact.component.scss
+++ b/src/app/contact/contact.component.scss
@@ -1,7 +1,7 @@
 .contact-container {
   display: flex;
   justify-content: center;
-  align-items: center;
+  align-items: baseline;
   position: relative;
   color: #ffffff;
   margin: 48px 100px 0 100px;
@@ -9,24 +9,29 @@
 
 .contact-border {
   position: absolute;
-  top: 10%;
-  left: -100px;
+  top: 27%;
+  left: -6.51vw;
   background-color: #ff4747;
-  width: 3.26vw;
-  height: 0.26vw;
+  height: clamp(2.5px, 0.26vw, 0.26vw);
+  width: clamp(28px, 3.26vw, 3.26vw);
 }
 
 .contact-left {
-  h1 {
-    font-size: 5.86vw;
-  }
+  position: relative;
+  min-width: 38vw;
 
+  h1 {
+    font-size: clamp(45px, 5.86vw, 5.86vw);
+  }
+  
   h4 {
-    font-size: 2.083vw;
+    font-size: clamp(25px, 2.083vw, 2.083vw);
   }
 
   p:nth-of-type(1) {
-    font-size: 1.04vw;
+    font-size: clamp(14px, 1.04vw, 1.04vw);
+    width: 65%;
+    min-width: 65%;
   }
 }
 
@@ -35,33 +40,213 @@
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  gap: 35px;
   box-sizing: border-box;
+  z-index: 1;
 
-  input, textarea {
+  span {
+    font-size: clamp(14px, 0.8vw, 0.8vw);
+    margin: 8px 0;
+    text-align: start;
+    width: 100%;
+    color: #e61c40;
+    letter-spacing: 0.1px;
+    opacity: 0;
+  }
+
+  input[type="text"],
+  input[type="email"],
+  textarea {
+    outline: none;
+  }
+
+  input,
+  textarea {
     display: flex;
     align-items: flex-start;
     width: 40.17vw;
+    min-width: 30vw;
     background-color: #141d2f;
     border: 1px solid #ff4747;
     border-radius: 10px;
-    padding: 15px 25px;
-    gap: 10px;
+    padding: 15px 75px 15px 25px;
     resize: none;
-    caret-color: #ffffff;
-    transition: all 225mx ease-out;
+    color: #ffffff;
 
     &:hover {
-        cursor: pointer;
-        border-color: #FA7902;
+      cursor: pointer;
+      border-color: #fa7902;
+    }
+
+    &:focus {
+      border: 1px solid #e61c40;
     }
 
     &:focus::placeholder {
-        color: transparent;
+      color: transparent;
     }
   }
 
   input:nth-of-type(3) {
     height: 202px;
   }
+}
+
+.contact-right-btn {
+  font-size: clamp(18px, 1.5vw, 1.5vw);
+  padding: 15px 30px;
+  border-radius: 10px;
+  background-color: #fa7902;
+  box-shadow: 4px 4px 4px rgba(0, 0, 0, 0.25);
+  color: #ffffff;
+  transition: all 125ms ease-out;
+  margin-bottom: 5.86vw;
+  white-space: nowrap;
+
+  &:hover {
+    cursor: pointer;
+    transform: scale(1.1);
+    background-color: #ff4747;
+  }
+}
+
+#name:not(:focus):not(:placeholder-shown) {
+  &:invalid {
+    background-repeat: no-repeat;
+    background-image: url("./../../assets/img/Invalid.png");
+    background-position: 96%;
+
+    ~ .invalid-name {
+      opacity: 1 !important;
+    }
+  }
+
+  &:valid {
+    border: 1px solid #70e61c;
+    background-image: url("./../../assets/img/Valid.png");
+    background-repeat: no-repeat;
+    background-position: 96%;
+    opacity: 1 !important;
+  }
+}
+#email:not(:focus):not(:placeholder-shown) {
+  &:invalid {
+    background-repeat: no-repeat;
+    background-image: url("./../../assets/img/Invalid.png");
+    background-position: 96%;
+
+    ~ .invalid-email {
+      opacity: 1 !important;
+    }
+  }
+
+  &:valid {
+    border: 1px solid #70e61c;
+    background-image: url("./../../assets/img/Valid.png");
+    background-repeat: no-repeat;
+    background-position: 96%;
+    opacity: 1 !important;
+  }
+}
+#message:not(:focus):not(:placeholder-shown) {
+  &:invalid {
+    background-repeat: no-repeat;
+    background-image: url("./../../assets/img/Invalid.png");
+    background-position: 96%;
+    background-position-y: 8%;
+    max-width: 100%;
+
+    ~ .invalid-message {
+      opacity: 1 !important;
+    }
+  }
+
+  &:valid {
+    border: 1px solid #70e61c;
+    background-image: url("./../../assets/img/Valid.png");
+    background-repeat: no-repeat;
+    background-position: 96%;
+    background-position-y: 8%;
+    opacity: 1 !important;
+  }
+}
+
+.go-up {
+  align-self: flex-end;
+  width: 40px;
+  height: 40px;
+  position: relative;
+  display: inline-block;
+  margin-bottom: 100px;
+
+  &:hover img:nth-of-type(2) {
+    display: inline;
+  }
+
+  img:nth-of-type(2) {
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 6;
+    display: none;
+  }
+}
+
+.contact-shadow {
+  position: absolute;
+  left: -100px;
+  width: 48.63vw;
+  max-height: 600px;
+  height: auto;
+}
+
+@media (max-width: 900px) {
+  .contact-container {
+    flex-direction: column;
+    align-items: center;
+    margin: 100px 50px 0 50px;
+  }
+
+  .contact-left {
+    position: unset;
+    margin-bottom: 45px;
+
+    p:nth-of-type(1) {
+      width: unset;
+    }
+  }
+
+  .contact-shadow {
+    bottom: 0;
+  }
+
+  .contact-border {
+    left: -50px;
+    top: clamp(55px, 5.86vw, 5.86vw);
+  }
+
+  .contact-right {
+    width: calc(100% - 100px);
+
+    input, textarea {
+      width: 100%;
+      min-width: unset;
+    }
+
+    span {
+      width: calc(100% + 100px);
+    }
+  }
+
+  .contact-right-btn {
+    margin-top: 35px;
+    margin-bottom: 160px;
+  }
+
+  .go-up {
+    position: absolute;
+    bottom: 50px;
+    right: 0;
+    margin-bottom: 0;
+  }
+
 }
