--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,22 +1,40 @@
 <div class="header">
-    <div class="header-name">
-        <a href="#" (click)="resetSelect()">L</a>
-        <a href="#" (click)="resetSelect()">e</a>
-        <a href="#" (click)="resetSelect()">o</a>
-        <a href="#" (click)="resetSelect()">n</a>
+  <div class="header-name">
+    <a href="#" (click)="resetSelect()">L</a>
+    <a href="#" (click)="resetSelect()">e</a>
+    <a href="#" (click)="resetSelect()">o</a>
+    <a href="#" (click)="resetSelect()">n</a>
+  </div>
+  <div class="header-group">
+    <div>
+      <a (click)="select('aboutMe')" href="#about-me">About me</a>
+      <div class="header-underline" [class.border-red]="aboutMe"></div>
     </div>
-    <div class="header-group">
-        <div>
-            <a (click)="select('aboutMe'); "  href="#about-me">About me</a>
-            <div class="header-underline" [class.border-red]="aboutMe"></div>
-        </div>
-        <div>
-            <a (click)="select('skills'); "  href="#skills">Skills</a>
-            <div class="header-underline" [class.border-red]="skills"></div>
-        </div>
-        <div>
-            <a (click)="select('portfolio'); "  href="#portfolio">Portfolio</a>
-            <div class="header-underline" [class.border-red]="portfolio"></div>
-        </div>
+    <div>
+      <a (click)="select('skills')" href="#skills">Skills</a>
+      <div class="header-underline" [class.border-red]="skills"></div>
     </div>
+    <div>
+      <a (click)="select('portfolio')" href="#portfolio">Portfolio</a>
+      <div class="header-underline" [class.border-red]="portfolio"></div>
+    </div>
+  </div>
+  <div (click)="openMobileMenu()" class="header-group-mobile-btn">
+    <img src="assets/img/Burger.png" />
+  </div>
+  <div class="header-group-mobile-menu" [class.mobile-menu]="isClicked">
+    <div class="header-group-mobile-logo">
+      <a (click)="closeMobileMenu()" href="#">L</a>
+      <a (click)="closeMobileMenu()" href="#">e</a>
+      <a (click)="closeMobileMenu()" href="#">o</a>
+      <a (click)="closeMobileMenu()" href="#">n</a>
+      <img (click)="closeMobileMenu()" src="assets/img/Close-burger.png" />
+    </div>
+    <div class="header-group-mobile-sections">
+      <a (click)="closeMobileMenu()" href="#about-me">About me</a>
+      <a (click)="closeMobileMenu()" href="#skills">My Skills</a>
+      <a (click)="closeMobileMenu()" href="#portfolio">Portfolio</a>
+      <a (click)="closeMobileMenu()" href="#contact">Contact</a>
+    </div>
+  </div>
 </div>
