--- a/src/app/introduction/introduction.component.scss
+++ b/src/app/introduction/introduction.component.scss
@@ -15,11 +15,11 @@
   align-items: center;
   flex-direction: column;
   white-space: nowrap;
-  gap: 2.9vw;
+  gap: clamp(26px, 2.9vw, 2.9vw);
 }
 
 .introduction-btn {
-  font-size: clamp(12px, 1.5vw, 1.5vw);
+  font-size: clamp(18px, 1.5vw, 1.5vw);
   background-color: #fa7902;
   color: #ffffff;
   border: none;
@@ -28,6 +28,7 @@
   padding: 15px 30px;
   box-shadow: 4px 4px 4px rgba(0, 0, 0, 0.25);
   transition: all 150ms ease-out;
+  text-decoration: none;
 
   &:hover {
     cursor: pointer;
@@ -42,19 +43,19 @@
 }
 
 .shadow-background {
-  width: 42vw;
+  width: clamp(320px, 42vw, 42vw);
 }
 
 .profile-picture {
   position: absolute;
-  width: 38vw;
+  width: clamp(320px, 38vw, 38vw);
 }
 
 .vertical-line {
   display: flex;
   justify-content: center;
   align-items: center;
-  font-size: 4.8vw;
+  font-size: clamp(28px, 4.8vw, 4.8vw);
   transform: rotate(180deg);
   writing-mode: vertical-lr;
   color: white;
@@ -70,13 +71,13 @@
   gap: 0.6vw;
 
   h1 {
-    font-size: 4.9vw;
+    font-size: clamp(32px, 4.9vw, 4.9vw);
     font-weight: 700;
     margin: 0;
   }
 
   h2 {
-    font-size: 3vw;
+    font-size: clamp(20px, 3vw, 3vw);
     color: #ff4747;
     text-transform: uppercase;
     margin: 0;
@@ -96,11 +97,12 @@
 }
 
 .introduction-vertical-border {
-  width: 6.5vw;
-  height: 0.26vw;
+  height: clamp(2.5px, 0.26vw, 0.26vw);
+  width: clamp(68px, 3.77vw, 3.77vw);
   background-color: #ff4747;
   border-top-right-radius: 4px;
   border-bottom-right-radius: 4px;
+  margin-right: 21px;
 }
 
 .introduction-links-container {
@@ -122,16 +124,22 @@
     width: 30px;
     height: 30px;
     margin: 0 21px;
+    transition: transform 100ms ease-in-out;
+
+    &:hover {
+      transform: scale(1.3);
+    }
+  }
+
+  a {
+    color: #ffffff;
+    font-size: clamp(15px, 1.5vw, 1.5vw);
+    margin: 0 21px;
+    text-decoration: none;
 
     &:hover {
       cursor: pointer;
     }
-  }
-
-  span {
-    color: #ffffff;
-    font-size: clamp(13px, 1.5vw, 1.5vw);
-    margin: 0 21px;
   }
 }
 
@@ -141,11 +149,12 @@
   justify-content: center;
   flex-direction: column;
   margin-right: 6.25vw;
+  z-index: 1;
 
   p {
     writing-mode: vertical-lr;
     color: #ffffff;
-    font-size: clamp(13px, 1.5vw, 1.5vw);
+    font-size: clamp(15px, 1.5vw, 1.5vw);
     margin: 0;
   }
 
@@ -158,9 +167,55 @@
 
 // ====== MEDIA-QUERY ====== //
 
-// @media (max-width: 1250px) {
+@media (max-width: 900px) {
 
-//   .introduction-vertical-vector {
-//     margin-top: -175px;
-//   }
-// }
+  .introduction-vertical-vector-picture {
+    margin-bottom: 50px;
+  }
+}
+
+@media (max-width: 768px) {
+
+  .introduction {
+    flex-direction: column;
+    margin: 109.3px 50px 0 50px;
+  }
+
+  .introduction-left {
+    justify-content: center;
+  }
+
+  .introduction-right {
+    z-index: 1;
+    margin-top: 35px;
+  }
+
+  .introduction-links {
+
+    a {
+      display: none;
+    }
+
+  }
+
+  .introduction-scroll-down {
+    display: none;
+  }
+
+  .introduction-links-container {
+    position: unset;
+    top: unset;
+    margin-bottom: 105px;
+  }
+
+  .introduction-vertical-vector {
+    margin-top: -250px;
+  }
+
+  .introduction-vertical-vector-picture {
+    width: 100vw;
+    max-width: 100%;
+    height: 300px;
+    margin-bottom: unset;
+  }
+}
