--- a/src/app/portfolio/portfolio.component.scss
+++ b/src/app/portfolio/portfolio.component.scss
@@ -1,25 +1,25 @@
 .flex {
   display: flex;
-  justify-content: space-evenly;
+  justify-content: space-between;
   align-items: center;
 }
 
 .portfolio {
+  position: relative;
   display: flex;
   flex-direction: column;
-  margin: 200px 100px 0 100px;
   color: #ffffff;
 }
 
 .portfolio-header {
   p {
     text-align: center;
-    font-size: 1.04vw;
-    margin-right: 7.49vw;
+    font-size: clamp(14px, 1.04vw, 1.04vw);
   }
 }
 
 .portfolio-header-group {
+  position: relative;
   display: flex;
   justify-content: flex-end;
   align-items: center;
@@ -27,28 +27,48 @@
   max-width: 100%;
 
   h1 {
-    font-size: 5.86vw;
+    font-size: clamp(45px, 5.86vw, 5.86vw);
     font-weight: 700;
     margin: 0 42px 0 36px;
   }
 
   div:nth-of-type(1) {
-    width: 7.1vw;
-    height: 0.26vw;
+    width: clamp(20px, 7.1vw, 7.1vw);
+    height: clamp(2.5px, 0.26vw, 0.26vw);
     background-color: #ff4747;
   }
 
   div:nth-of-type(2) {
     width: 31.51vw;
-    height: 0.26vw;
+    height: clamp(2.5px, 0.26vw, 0.26vw);
     background-color: #ff4747;
   }
 }
 
 .portfolio-projects-container {
-    display: flex;
-    flex-direction: column;
-    gap: 72px;
+  display: flex;
+  flex-direction: column;
+  gap: 72px;
+  padding: 0 100px;
+}
+
+.portfolio-shadow-orange {
+  position: absolute;
+  background-repeat: no-repeat;
+  right: 0;
+  bottom: -15%;
+  z-index: -1;
+  width: 27.86vw;
+  height: auto;
+}
+
+.portfolio-shadow-red {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  z-index: -1;
+  height: auto;
+  width: 41.4vw;
 }
 
 .portfolio-project-image {
@@ -64,16 +84,16 @@
 
   h1 {
     color: #ff4747;
-    font-size: 2.083vw;
+    font-size: clamp(32px, 2.083vw, 2.083vw);
   }
 
   span {
     color: #fa7902;
-    font-size: 1.5vw;
+    font-size: clamp(18px, 1.5vw, 1.5vw);
   }
 
   p {
-    font-size: 1.04vw;
+    font-size: clamp(16px, 1.04vw, 1.04vw);
     line-height: 19px;
     letter-spacing: 0.5px;
   }
@@ -84,11 +104,12 @@
 
   a {
     text-decoration: none;
-    margin-right: 86px;
-    padding: 15px 30px;
-    border-radius: 10px;
+    margin-right: 5.59vw;
+    padding: 0.97vw 1.95vw;
+    border-radius: 0.65vw;
     color: #ffffff;
-    font-size: 1.5vw;
+    font-size: clamp(18px, 1.5vw, 1.5vw);
+    white-space: nowrap;
 
     &:nth-of-type(1) {
       background-color: #ff4747;
@@ -104,16 +125,118 @@
   }
 }
 
-.even:nth-of-type(1) {
+.even {
+  margin-left: 20%;
+  &:nth-of-type(1) {
     margin-top: 72px;
+  }
 }
 
 .odd {
-    flex-direction: row-reverse;
-    text-align: end;
-    
-    a {
-        margin-right: 0;
-        margin-left: 86px;
-    }
+  margin: 0 15% 0 5%;
+  flex-direction: row-reverse;
+  text-align: end;
+
+  a {
+    margin-right: 0;
+    margin-left: 5.59vw;
+  }
 }
+
+@media (max-width: 1280px) {
+  .portfolio {
+    padding-top: 250px;
+  }
+}
+
+@media (max-width: 1000px) {
+  .odd,
+  .even {
+    flex-direction: unset;
+    text-align: unset;
+    margin: unset;
+  }
+
+  .flex {
+    flex-direction: column;
+    text-align: center;
+  }
+
+  .portfolio-project-image {
+    img {
+      width: 50vw;
+    }
+  }
+
+  .portfolio-project-introduction {
+    max-width: unset;
+
+    h1 {
+      margin-top: -25px;
+    }
+  }
+
+  .portfolio-shadow-red {
+    top: 35%;
+  }
+
+  .portfolio-links {
+    margin: 0;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    gap: 12px;
+
+    a {
+      padding: 15px 30px;
+      margin: 24px 0 0 0;
+      border-radius: 10px;
+    }
+  }
+}
+
+@media (max-width: 800px) {
+  .portfolio-shadow-red {
+    top: 45%;
+  }
+}
+
+@media (max-width: 768px) {
+  .portfolio-projects-container {
+    padding: 0 50px;
+  }
+
+  .portfolio-header-group {
+    .portfolio-links {
+      justify-content: space-between;
+    }
+  }
+
+  .portfolio-project-image {
+    img {
+      width: 65vw;
+    }
+  }
+}
+
+@media (max-width: 560px) {
+  .portfolio {
+    padding-left: 0;
+    padding-right: 0;
+  }
+
+  .portfolio-projects-container {
+    padding: 0 50px;
+  }
+}
+
+@media (max-width: 450px) {
+  .portfolio-header-group {
+
+    h1 {
+      margin: 0 10px 0 9px;
+    }
+  }
+}
+
+
