--- a/src/app/skills/skills.component.html
+++ b/src/app/skills/skills.component.html
@@ -6,11 +6,11 @@
         </div>
         <div class="skill-icons">
             <img src="assets/img/Typescript.png">
-            <span>Typescript</span>
+            <span>TypeScript</span>
         </div>
         <div class="skill-icons">
             <img src="assets/img/Javascript.png">
-            <span>Javascript</span>
+            <span>JavaScript</span>
         </div>
         <div class="skill-icons">
             <img src="assets/img/HTML.png">
@@ -49,7 +49,7 @@
         <div>
             <p class="skills-p">I have grown my frontend developments skills that have allowed<br>me to create different real projects.</p>
         </div>
-        <button class="skills-btn">Get in touch</button>
+        <a href="#contact" class="skills-btn">Get in touch</a>
         <div class="skills-border"></div>
     </div>
 </div>
