finish portfolio test 1

--- a/src/app/about-me/about-me.component.scss
+++ b/src/app/about-me/about-me.component.scss
@@ -9,6 +9,7 @@
         font-size: clamp(45px, 5.85vw, 5.85vw);
         font-weight: 700;
         margin-top: 0;
+        margin-bottom: 35px;
     }
 }
 
