--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -15,10 +15,8 @@
     <span class="footer-copyright">© Leon Groschek 2023</span>
   </div>
   <div class="footer-icons">
-    <img src="assets/img/Github-btn.png" />
-    <a href="#contact">
-      <img src="assets/img/Email-btn.png" />
-    </a>
-    <img src="assets/img/Linkedin-btn.png" />
+    <a href="https://github.com/leongrx" target="_blank"><img src="assets/img/Github-btn.png"/></a>
+    <a href="#contact"><img src="assets/img/Email-btn.png"/></a>
+    <a href="https://www.linkedin.com/in/Leon-Groschek/"><img src="assets/img/Linkedin-btn.png"/></a>
   </div>
 </div>
