--- a/src/app/introduction/introduction.component.html
+++ b/src/app/introduction/introduction.component.html
@@ -19,9 +19,9 @@
     <div class="introduction-links-container">
         <div class="introduction-links">
             <div class="introduction-vertical-border"></div>
-            <img src="assets/img/Github-btn.png">
-            <img src="assets/img/Email-btn.png">
-            <img src="assets/img/Linkedin-btn.png">
+            <a href="https://github.com/leongrx" target="_blank"><img src="assets/img/Github-btn.png"></a>
+            <a href="#contact"><img src="assets/img/Email-btn.png"></a>
+            <a href="https://www.linkedin.com/in/Leon-Groschek/" target="_blank"><img src="assets/img/Linkedin-btn.png"></a>
             <a href="#contact">leon.groschek12@gmail.com</a>
         </div>
         <div class="introduction-scroll-down">
