--- a/src/app/portfolio/portfolio.component.scss
+++ b/src/app/portfolio/portfolio.component.scss
@@ -15,6 +15,7 @@
   p {
     text-align: center;
     font-size: clamp(14px, 1.04vw, 1.04vw);
+    padding: 0 50px;
   }
 }
 
@@ -140,12 +141,6 @@
   a {
     margin-right: 0;
     margin-left: 5.59vw;
-  }
-}
-
-@media (max-width: 1280px) {
-  .portfolio {
-    padding-top: 250px;
   }
 }
 
