--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -17,6 +17,6 @@
   <div class="footer-icons">
     <a href="https://github.com/leongrx" target="_blank"><img src="assets/img/Github-btn.png"/></a>
     <a href="#contact"><img src="assets/img/Email-btn.png"/></a>
-    <a href="https://www.linkedin.com/in/Leon-Groschek/"><img src="assets/img/Linkedin-btn.png"/></a>
+    <a href="https://www.linkedin.com/in/Leon-Groschek/" target="_blank"><img src="assets/img/Linkedin-btn.png"/></a>
   </div>
 </div>
