--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -88,6 +88,7 @@
   max-width: 100%;
   height: 100vh;
   background-color: #141D2F;
+  transition: 125ms ease-in-out;
 }
 
 .header-group-mobile-logo {
