--- a/src/app/portfolio/portfolio.component.html
+++ b/src/app/portfolio/portfolio.component.html
@@ -11,7 +11,7 @@
   </div>
     <!-- ======================================== -->
   <div class="portfolio-projects-container">
-    <div data-aos="zoom-in-down" data-aos-duration="250" data-aos-easing="ease-in-out" data-aos-anchor-placement="top-center" class="portfolio-project flex" *ngFor="let item of data; let i = index; even as isEven; odd as isOdd" [ngClass]="{'odd': isOdd, 'even': isEven}">
+    <div data-aos="zoom-in-down" data-aos-duration="75" data-aos-easing="ease-in-out" data-aos-anchor-placement="center-bottom" class="portfolio-project flex" *ngFor="let item of data; let i = index; even as isEven; odd as isOdd" [ngClass]="{'odd': isOdd, 'even': isEven}">
         <div class="portfolio-project-image">
             <img src="{{item.image}}">
         </div>
