--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -1,29 +1,70 @@
 <div class="contact-container" id="contact">
-    <div class="contact-left">
-        <h1>Contact</h1>
-        <div class="contact-border"></div>
-        <h4>Got a problem to solve?</h4>
-        <p>
-            Contact me through this form, I am interested in hearing you,
-            knowing your ideas and contributing to your projects with my work.
-        </p>
-        <p>
-            Need a Frontend developer? <b>Contact me!</b>
-        </p>
-        <img class="contact-shadow" src="assets/img/Contact-shadow-red.png">
-    </div>
-    <form autocomplete="off" (submit)="sendMail()" ngNativeValidate class="contact-right" #myForm>
-        <input (click)="displaySpans()" id="name" required type="text" onfocus="this.placeholder=''" placeholder="Your name" name="name" #nameField>
-        <span [class.invalid-name]="spanName">{{ invalidName }}</span>
-        <input (click)="displaySpans()" id="email" required type="email" onfocus="this.placeholder=''" placeholder="Your email" name="email" #emailField>
-        <span [class.invalid-email]="spanEmail">{{ invalidEmail }}</span>
-        <textarea (click)="displaySpans()" id="message" required type="text" name="message" cols="30" rows="10" onfocus="this.placeholder=''" placeholder="Your message" #messageField></textarea>
-        <span [class.invalid-message]="spanMessage">{{ invalidMessage }}</span>
-        <button class="contact-right-btn" #sendButton>Send message :)</button>
-        <a class="go-up" href="#">
-            <img src="assets/img/Go-up-white.png">
-            <img src="assets/img/Go-up-orange.png">
-        </a>
-    </form>
+  <div class="contact-left">
+    <h1>Contact</h1>
+    <div class="contact-border"></div>
+    <h4>Got a problem to solve?</h4>
+    <p>
+      Contact me through this form, I am interested in hearing you, knowing your
+      ideas and contributing to your projects with my work.
+    </p>
+    <p>Need a Frontend developer? <b>Contact me!</b></p>
+    <img class="contact-shadow" src="assets/img/Contact-shadow-red.png" />
+  </div>
+  <form
+    [formGroup]="contactForm"
+    autocomplete="off"
+    (submit)="sendMail()"
+    ngNativeValidate
+    class="contact-right"
+    #myForm
+    >
+    <input
+    id="name"
+    required
+    type="text"
+    minlength="3"
+    placeholder="Your name"
+    formControlName="name"
+    #nameField
+    (keyup)="validation()"
+    />
+    <span *ngIf="name && name.invalid && name.touched">{{
+        invalidName
+    }}</span>
+    <br>
+    <input
+    id="email"
+    required
+    type="email"
+    placeholder="Your email"
+    formControlName="email"
+    #emailField
+    (keyup)="validation()"
+    />
+    <span *ngIf="email && email.invalid && email.touched">{{ invalidEmail }}</span>
+    <br>
+    <textarea
+    id="message"
+    required
+    type="text"
+    minlength="3"
+    formControlName="message"
+    cols="30"
+    rows="10"
+    placeholder="Your message"
+    #messageField
+    (keyup)="validation()"
+    ></textarea>
+    <span *ngIf="message && message.invalid && message.touched">{{ invalidMessage }}</span>
+    <br>
+    
+    <button class="contact-right-btn" #sendButton [disabled]="contactForm.invalid">Send message :)</button>
+    <a class="go-up" href="#">
+        <img src="assets/img/Go-up-white.png" />
+        <img src="assets/img/Go-up-orange.png" />
+    </a>
+</form>
 </div>
-<div class="mail-toast" [class.mail-toast]="mailSuccess" >{{ toastMessage }}</div>
+<div class="mail-toast" [class.mail-toast]="mailSuccess">
+  {{ toastMessage }}
+</div>
