--- a/src/app/contact/contact.component.scss
+++ b/src/app/contact/contact.component.scss
@@ -50,7 +50,6 @@
     width: 100%;
     color: #e61c40;
     letter-spacing: 0.1px;
-    opacity: 0;
   }
 
   input[type="text"],
@@ -71,21 +70,21 @@
     padding: 15px 75px 15px 25px;
     resize: none;
     color: #ffffff;
-
+    
     &:hover {
       cursor: pointer;
       border-color: #fa7902;
     }
-
+    
     &:focus {
       border: 1px solid #e61c40;
     }
-
+    
     &:focus::placeholder {
       color: transparent;
     }
   }
-
+  
   input:nth-of-type(3) {
     height: 202px;
   }
@@ -101,7 +100,8 @@
   transition: all 125ms ease-out;
   margin-bottom: 5.86vw;
   white-space: nowrap;
-
+  border: none;
+  
   &:hover {
     cursor: pointer;
     transform: scale(1.1);
@@ -109,65 +109,19 @@
   }
 }
 
-#name:not(:focus):not(:placeholder-shown) {
-  &:invalid {
-    background-repeat: no-repeat;
-    background-image: url("./../../assets/img/Invalid.png");
-    background-position: 96%;
-
-    ~ .invalid-name {
-      opacity: 1 !important;
-    }
-  }
-
-  &:valid {
-    border: 1px solid #70e61c;
-    background-image: url("./../../assets/img/Valid.png");
-    background-repeat: no-repeat;
-    background-position: 96%;
-    opacity: 1 !important;
-  }
+.invalid {
+  background: url(../../assets/img/Invalid.png);
+  background-size: 24px 24px;
+  background-repeat: no-repeat;
+  background-position: 95% 12px;
 }
-#email:not(:focus):not(:placeholder-shown) {
-  &:invalid {
-    background-repeat: no-repeat;
-    background-image: url("./../../assets/img/Invalid.png");
-    background-position: 96%;
 
-    ~ .invalid-email {
-      opacity: 1 !important;
-    }
-  }
-
-  &:valid {
-    border: 1px solid #70e61c;
-    background-image: url("./../../assets/img/Valid.png");
-    background-repeat: no-repeat;
-    background-position: 96%;
-    opacity: 1 !important;
-  }
-}
-#message:not(:focus):not(:placeholder-shown) {
-  &:invalid {
-    background-repeat: no-repeat;
-    background-image: url("./../../assets/img/Invalid.png");
-    background-position: 96%;
-    background-position-y: 8%;
-    max-width: 100%;
-
-    ~ .invalid-message {
-      opacity: 1 !important;
-    }
-  }
-
-  &:valid {
-    border: 1px solid #70e61c;
-    background-image: url("./../../assets/img/Valid.png");
-    background-repeat: no-repeat;
-    background-position: 96%;
-    background-position-y: 8%;
-    opacity: 1 !important;
-  }
+.valid {
+  background: url(../../assets/img/Valid.png);
+  background-size: 24px 24px;
+  background-repeat: no-repeat;
+  background-position: 95% 12px;
+  border: 1px solid green !important;
 }
 
 .go-up {
@@ -205,15 +159,14 @@
   align-items: center;
   flex-direction: column;
   position: fixed;
-  bottom: 50px;
-  right: 50px;
+  top: 0;
+  width: 100vw;
+  max-width: 100%;
   background-color: darkgreen;
   z-index: 9999;
-  padding: 15px 35px;
-  border-radius: 10px;
+  padding: 8px;
   color: white;
   font-size: clamp(18px, 1.5vw, 1.5vw);
-  margin-top: -50px;
   box-shadow: 4px 4px 4px rgb(0 0 0 / 25%);
   transition: all 225ms ease-in-out;
 }
