--- a/src/app/introduction/introduction.component.scss
+++ b/src/app/introduction/introduction.component.scss
@@ -29,6 +29,7 @@
   box-shadow: 4px 4px 4px rgba(0, 0, 0, 0.25);
   transition: all 150ms ease-out;
   text-decoration: none;
+  z-index: 1;
 
   &:hover {
     cursor: pointer;
